2000-04-15  Matt Loper  <matt@helixcode.com>

	* e-table.c (et_xml_to_header): sanity-check our parameters.
	(et_grouping_xml_to_sort_info): same.
	(et_real_construct): Bail if we couldn't get the children we
	wanted.

2000-04-14  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c, e-table-item.h: Added a row height cache.

2000-04-15  Ettore Perazzoli  <ettore@helixcode.com>

	* e-table.c (e_table_construct): Use `strlen (copy)' instead of
	`strlen (copy) + 1' as the size argument for `xmlParseMemory()'.

2000-04-14  Miguel de Icaza  <miguel@gnu.org>

	* e-table.c, e-table.h: Switch the parent object to be a GtkTable.
	(et_real_construct): apply massaging and some loving action to
	make the thing behave as a GtkTable.
	(e_table_init): More love.

2000-04-12  Miguel de Icaza  <miguel@gnu.org>

	* e-table-header-item.c (ethi_drag_motion): Remove test for
	source.  We will fix this later.
	
	(ethi_end_resize): Reset resize_guide here.

2000-04-11  Miguel de Icaza  <miguel@helixcode.com>

	* e-table-header-item.c (ethi_add_destroy_marker): Add group
	indent width here.
	(is_pointer_on_division): Use the group indent here, so the
	resize pointer is shown at the correct time.
	(TOLERANCE): Bump it up to 3
	(draw_button): Do not paint an arrow if there is an icon present,
	and not enough space to paint.

2000-04-10  Miguel de Icaza  <miguel@helixcode.com>

	* e-table-header-item.c (make_shapped_window_from_xpm): New
	routine, creates a shapped mask window from an xpm buffer.
	(ethi_add_drop_marker): New version, uses shaped windows instead
	of canvas items to signal the drop location.
	(ethi_maybe_start_drag): Disable dragging if there is only one
	column left.

2000-04-10  Miguel de Icaza  <miguel@gnu.org>

	* e-table-header-item.c (ethi_drag_motion): Drop frozen count
	support from here. 
	(ethi_start_drag): ditto.

	* e-table-header.h: Kill frozen_count.

2000-04-09  Matt Loper  <matt@helixcode.com>
